# roboreplay

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  publish.yml
api/compare/: index.html
api/diagnose/: index.html
api/export/: index.html
api/recorder/: index.html
api/replay/: index.html
cli/: index.html
docs/: cli.md  index.md  use-cases.md
docs/api/: compare.md  diagnose.md  export.md  recorder.md  replay.md
docs/examples/: batch-analysis.md  cartpole.md  custom-robot.md  mujoco-panda.md  pick-place.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: comparing.md  diagnosis.md  exporting.md  gymnasium.md  recording.md  replaying.md
examples/: batch_analysis.py  custom_robot.py  gymnasium_cartpole.py  mujoco_panda.py  simulated_pick_place.py
examples/batch-analysis/: index.html
examples/cartpole/: index.html
examples/custom-robot/: index.html
examples/mujoco-panda/: index.html
examples/pick-place/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/comparing/: index.html
guide/diagnosis/: index.html
guide/exporting/: index.html
guide/gymnasium/: index.html
guide/recording/: index.html
guide/replaying/: index.html
roboreplay/: __init__.py  compare.py  gym_wrapper.py  recorder.py  replay.py
roboreplay/cli/: main.py
roboreplay/diagnose/: __init__.py  anomaly.py  llm.py
roboreplay/export/: __init__.py  csv.py  html.py
roboreplay/storage/: format.py  reader.py  writer.py
roboreplay/utils/: schema.py
search/: search_index.json
tests/: test_core.py
use-cases/: index.html
